@@ -276,7 +276,7 @@ namespace dynamicsJRLJapan
       @{
      */
     /*! \brief parent Joint */
-    CjrlJoint&  parentJoint() const ;
+    CjrlJoint*  parentJoint() const ;
 
     /*! \brief Add a child Joint */
     bool addChildJoint(const CjrlJoint&);
@@ -285,7 +285,7 @@ namespace dynamicsJRLJapan
     unsigned int countChildJoints() const;
     
     /*! \brief Returns the child joint at the given rank */
-    CjrlJoint& childJoint(unsigned int givenRank) const;
+    CjrlJoint* childJoint(unsigned int givenRank) const;
 
     /**
     ! \brief Get a vector containing references of the joints between the rootJoint and this joint. The root Joint and this Joint are included in the vector.
