@@ -13,5 +13,6 @@ typedef dynamicsJRLJapan::HumanoidDynamicMultiBody CimplHumanoidDynamicRobot;
 typedef dynamicsJRLJapan::JointFreeflyer CimplJointFreeFlyer;
 typedef dynamicsJRLJapan::JointRotation CimplJointRotation;
 typedef dynamicsJRLJapan::JointTranslation CimplJointTranslation;
+typedef dynamicsJRLJapan::Body CimplBody;
 
 #endif
